[workspace]
members = [
    "blobstore-fs",
    "blobstore-s3",
    "httpclient",
    "httpserver-rs",
    "kv-vault",
    "kvredis",
    "lattice-controller",
    "nats",
    "sqldb-postgres"
]

[workspace.dependencies]
anyhow = "1.0.69"
assert_matches = "1.5"
async-nats = "0.23"
async-trait = "0.1.52"
atty = "0.2"
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
aws-smithy-http = "0.51.0"
aws-smithy-types = "0.51.0"
aws-types = "0.51.0"
base64 = "0.13"
bb8-postgres = "0.8.1"
bit-vec = "0.6"
blake2 = "0.10.4"
bytes = "1.2"
chrono = "0.4"
crc32fast = "1.3.2"
crossbeam = "0.8"
env_logger = "0.9"
fastrand = "1.7"
futures = "0.3"
futures-util = "0.3.23"
http = "0.2.6"
minicbor = "0.17.1"
native-tls = "0.2"
once_cell = "1.8"
opentelemetry = "0.18.0"
rand = "0.8"
redis = "0.22.1"
reqwest = { version = "0.11", default-features = false }
rmp-serde = "1.1.0"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
simple_env_load = "0.2.0"
thiserror = "1.0"
tokio = "1.17.0"
tokio-postgres = "0.7"
tokio-stream = "0.1.8"
tokio-util = "0.7.0"
toml = "0.5"
tracing = "0.1.36"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
url = "2.2.2"
uuid = "1.1.2"
vaultrs = "0.6.0"
warp = "0.3"
wascap = "0.9.0"
wasmbus-rpc = "0.11.2"
wasmcloud-control-interface = "0.23.0"
wasmcloud-interface-blobstore = "0.5.1"
wasmcloud-interface-httpclient = "0.8.1"
wasmcloud-interface-httpserver = "0.8.1"
wasmcloud-interface-keyvalue = "0.9.1"
wasmcloud-interface-lattice-control = "0.17.0"
wasmcloud-interface-messaging = "0.8.1"
wasmcloud-interface-sqldb = "0.8.1"
wasmcloud-interface-testing = "0.7.1"
wasmcloud-test-util = { git = "https://github.com/rvolosatovs/wasmcloud-test", branch = "feat/runtime-config" }
weld-codegen = "0.6.0"
