[package]
name = "blobstore-fs"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
log = "0.4"
wasmcloud-interface-blobstore = {path = "../../interfaces/blobstore/rust"}
wasmbus-rpc = "0.7"
tokio = "1.17.0"


# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.2"
tokio = { version = "1.0", features = [ "full" ] }

[[bin]]
name = "blobstore_fs"
path = "src/main.rs"
