[package]
name = "wasmcloud-provider-blobstore-fs"
version = "0.1.1"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
atty = "0.2"
tracing = "0.1.36"
#wasmcloud-interface-blobstore = "0.4"
wasmcloud-interface-blobstore = { git = "https://github.com/wasmcloud/interfaces", rev = "c5e09cac09e04c9ca4fb0d78d19bde5f093c8133" }
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev="77f50ddd476e0b2a50915de6c4fb0f41e6e24c85", features = ["otel"] }
tokio = "1.17.0"
base64 = "0.13"
serde_json = "1.0"
serde = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# test dependencies
[dev-dependencies]
wasmcloud-test-util = { git = "https://github.com/wasmcloud/wasmcloud-test", rev = "266272ab2466187bfaa2cd2410881b5c9bd002c2" }
tokio = { version = "1.0", features = [ "full" ] }
futures-util = "0.3.23"

[[bin]]
name = "blobstore_fs"
path = "src/main.rs"
