[package]
name = "wasmcloud-provider-blobstore-s3"
version = "0.1.5"
edition = "2021"

[dependencies]
async-trait = "0.1"
atty = "0.2"
aws-sdk-s3 = "0.8.0"
aws-config = "0.8.0"
aws-types = { version = "0.8.0", features = ["hardcoded-credentials"] }
aws-smithy-types = "0.38.0"
base64 = "0.13"
bytes = "1.0"
http = "0.2.6"
futures = "0.3"
futures-util = "0.3.21"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
simple_env_load = "0.2.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.8"}
tokio-util = { version = "0.7.0", features = ["io"] }
toml = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "6da17f739b0ad0f1a58df2061eedd0d2f92baee0", features = ["otel"] }

# test dependencies
[dev-dependencies]
rand = "0.8"
fastrand = "1.7"
crc32fast = "1.3.2"
env_logger = "0.9"
wasmcloud-test-util = { git = "https://github.com/wasmcloud/wasmcloud-test", rev = "73d96b44f142777f3d2d9b1d7a5bbfdac73ea5c3" }
wasmcloud-interface-blobstore = { git = "https://github.com/wasmcloud/interfaces", rev = "763d27dcfd6a5bf72a9f82ed406f638fdb429615" }
wasmcloud-interface-testing = { git = "https://github.com/wasmcloud/interfaces", rev = "763d27dcfd6a5bf72a9f82ed406f638fdb429615" }

[build-dependencies]
weld-codegen = { git = "https://github.com/wasmcloud/weld", rev = "38eb105b135d615ab0910a05a9e7d5e821e85176" }

[lib]
name = "blobstore_s3_lib"
path = "src/lib.rs"

[[bin]]
name = "blobstore-s3"
path = "src/main.rs"

#[workspace]
#members = [ "blobview" ]
