[package]
name = "wasmcloud-provider-blobstore-s3"
version = "0.2.3"
edition = "2021"

[dependencies]
async-trait = "0.1"
atty = "0.2"
aws-sdk-s3 = "0.21.0"
aws-config = "0.51.0"
aws-types = { version = "0.51.0", features = ["hardcoded-credentials"] }
aws-smithy-http = "0.51.0"
aws-smithy-types = "0.51.0"
base64 = "0.13"
bytes = "1.0"
http = "0.2.6"
futures = "0.3"
futures-util = "0.3.21"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
simple_env_load = "0.2.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.8"}
tokio-util = { version = "0.7.0", features = ["io"] }
toml = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev="77f50ddd476e0b2a50915de6c4fb0f41e6e24c85", features = ["otel"] }

# test dependencies
[dev-dependencies]
rand = "0.8"
fastrand = "1.7"
crc32fast = "1.3.2"
env_logger = "0.9"
wasmcloud-test-util = "0.5.0"
wasmcloud-interface-blobstore = { git = "https://github.com/wasmcloud/interfaces", rev = "c5e09cac09e04c9ca4fb0d78d19bde5f093c8133" }
wasmcloud-interface-testing = { git = "https://github.com/wasmcloud/interfaces", rev = "c5e09cac09e04c9ca4fb0d78d19bde5f093c8133" }

[build-dependencies]
weld-codegen = "0.5.0"

[lib]
name = "blobstore_s3_lib"
path = "src/lib.rs"

[[bin]]
name = "blobstore-s3"
path = "src/main.rs"
