[package]
name = "wasmcloud-provider-blobstore-s3"
version = "0.4.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
atty = "0.2"
aws-sdk-s3 = "0.23.0"
aws-config = "0.53.0"
aws-types = "0.53.0"
aws-smithy-http = "0.53.0"
aws-smithy-types = "0.53.0"
aws-credential-types = { version = "0.53.0", features = ["hardcoded-credentials"] }
base64 = "0.21"
bytes = "1.3"
http = "0.2"
futures = "0.3"
futures-util = "0.3"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
simple_env_load = "0.2.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1"}
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmbus-rpc = { version = "0.11.2", features = ["otel"] }

# test dependencies
[dev-dependencies]
rand = "0.8"
fastrand = "1.7"
crc32fast = "1.3.2"
env_logger = "0.9"
wasmcloud-test-util = "0.6.4"
wasmcloud-interface-blobstore = "0.5.1"
wasmcloud-interface-testing = "0.7.1"

[build-dependencies]
weld-codegen = "0.6.0"

[lib]
name = "blobstore_s3_lib"
path = "src/lib.rs"

[[bin]]
name = "blobstore-s3"
path = "src/main.rs"
