[package]
name = "wasmcloud-provider-httpclient"
version = "0.4.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
crossbeam="0.8"
futures = "0.3"
once_cell = "1.8"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
rmp-serde = "0.15"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmcloud-interface-httpclient = { path = "../../interfaces/httpclient/rust" }
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "7a6522e5333e72a423d3aaac89f5060514d0d333", features = ["otel"] }

# test dependencies
[dev-dependencies]
wasmcloud-test-util = { path = "../../wasmcloud-test/wasmcloud-test-util" }

[[bin]]
name = "httpclient"
path = "src/main.rs"
