[package]
name = "wasmcloud-provider-httpclient"
version = "0.5.4"
edition = "2021"

[dependencies]
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
bytes = "1.2"
chrono = "0.4"
crossbeam = "0.8"
futures = "0.3"
once_cell = "1.8"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
rmp-serde = "1.1.0"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

wasmcloud-interface-httpclient = { git = "https://github.com/wasmcloud/interfaces", rev = "c5e09cac09e04c9ca4fb0d78d19bde5f093c8133" }
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev="77f50ddd476e0b2a50915de6c4fb0f41e6e24c85", features = ["otel"] }

# test dependencies
[dev-dependencies]
wasmcloud-test-util = { git = "https://github.com/wasmcloud/wasmcloud-test", rev = "266272ab2466187bfaa2cd2410881b5c9bd002c2" }

[[bin]]
name = "httpclient"
path = "src/main.rs"
