[package]
name = "wasmcloud-provider-httpserver"
version = "0.15.6-alpha-1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
atty = "0.2"
base64 = "0.13"
bytes = "1.0"
futures = "0.3"
http = "0.2"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = { version="0.3", features=["tls"] }
wasmcloud-interface-httpserver = { git = "https://github.com/wasmcloud/interfaces", rev = "7b8fe081e8e94530a1c571348ab37e6650420878" }
#wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "3029ca06bae2c08237563e39988988a32ceee01d", features = ["otel"] }
wasmbus-rpc = { path = "../../weld/rpc-rs" }

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
# We don't use paste directly, but we pin to a version that works with aarch64-linux
paste = "=1.0.6"

[patch."https://github.com/wasmcloud/weld"]
wasmbus-rpc = { path = "../../weld/rpc-rs" }

[patch.crates-io]
async-nats = { path = "../../../nats.rs/async-nats" }

[dev-dependencies]
assert_matches = "1.5"
blake2 = "0.9"
reqwest = { version = "0.11", features = ["json"]}
wasmcloud-test-util = { git = "https://github.com/wasmcloud/wasmcloud-test", rev = "fc56ff6ba5008145f5add20f7f06eaa6456717e2" }

[lib]
name = "wasmcloud_provider_httpserver"
path = "src/lib.rs"

[[bin]]
name = "httpserver"
path = "bin/main.rs"

