[package]
name = "wasmcloud-provider-httpserver"
version = "0.16.4"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
atty = "0.2"
base64 = "0.13"
bytes = "1.2"
futures = "0.3"
http = "0.2"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = { version="0.3", features=["tls"] }
wasmcloud-interface-httpserver = { git = "https://github.com/wasmcloud/interfaces", rev = "c5e09cac09e04c9ca4fb0d78d19bde5f093c8133" }
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev="77f50ddd476e0b2a50915de6c4fb0f41e6e24c85", features = ["otel"] }

[dev-dependencies]
assert_matches = "1.5"
blake2 = "0.10.4"
reqwest = { version = "0.11", features = ["json"]}
wasmcloud-test-util = { git = "https://github.com/wasmcloud/wasmcloud-test", rev = "266272ab2466187bfaa2cd2410881b5c9bd002c2" }

[lib]
name = "wasmcloud_provider_httpserver"
path = "src/lib.rs"

[[bin]]
name = "httpserver"
path = "bin/main.rs"
