[package]
name = "wasmcloud-provider-httpserver"
version = "0.17.2"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
atty = "0.2"
base64 = "0.21"
bytes = "1.2"
dashmap = "5.4.0"
flume = "0.10.14"
futures = "0.3"
http = "0.2"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = { version="0.3", features=["tls"] }
# wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev="6d6eee2fbc78e81ae4fa8eb94c5b4457efd2716e", features = [ "otel" ] }
wasmbus-rpc = { path = "../../weld/rpc-rs" }

[build-dependencies]
#weld-codegen = { git= "https://github.com/wasmcloud/weld", rev="122b87d132c570cdfc7583bea740aa4667170578" }
weld-codegen = { path = "../../weld/codegen" }

[dev-dependencies]
assert_matches = "1.5"
blake2 = "0.10.4"
reqwest = { version = "0.11", features = ["json"]}
#wasmcloud-test-util = "0.6"
wasmcloud-test-util = { path = "../../wasmcloud-test/wasmcloud-test-util" }

[lib]
name = "wasmcloud_provider_httpserver"
path = "src/lib.rs"

[[bin]]
name = "httpserver"
path = "bin/main.rs"

