[package]
name = "wasmcloud-provider-kv-vault"
description = "Hashicorp Vault capability provider for the wasmcloud KeyValue capability contract wasmcloud:keyvalue"
authors = [ "wasmcloud Team" ]
version = "0.1.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/wasmcloud/capability-providers"
publish = false

[dependencies]
async-trait = "0.1"
atty = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2.2"
vaultrs = "0.6.0"
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "3029ca06bae2c08237563e39988988a32ceee01d", features = ["otel"] }

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
# We don't use paste directly, but we pin to a version that works with aarch64-linux
paste = "=1.0.6"

# test dependencies
[dev-dependencies]
rand = "0.8"
env_logger = "0.9"
wasmcloud-test-util = { git = "https://github.com/wasmcloud/wasmcloud-test", rev = "8cde90d1c4a492b40be4b699db86922c8c3d93fd" }

[build-dependencies]
# for local code generation of wasmbus-interface-keyvalue
weld-codegen = { git = "https://github.com/wasmcloud/weld", rev = "38eb105b135d615ab0910a05a9e7d5e821e85176" }

[lib]
name = "kv_vault_lib"
path = "src/lib.rs"

[[bin]]
name = "kv-vault"
path = "src/main.rs"
