[package]
name = "wasmcloud-provider-kv-vault"
description = "Hashicorp Vault capability provider for the wasmcloud KeyValue capability contract wasmcloud:keyvalue"
authors = [ "wasmcloud Team" ]
version = "0.2.4"
edition = "2021"
readme = "README.md"
repository = "https://github.com/wasmcloud/capability-providers"
publish = false

[dependencies]
async-trait = "0.1"
atty = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2.2"
vaultrs = "0.6.0"
wasmcloud-interface-keyvalue = { git = "https://github.com/wasmcloud/interfaces", rev = "c5e09cac09e04c9ca4fb0d78d19bde5f093c8133" }
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev="77f50ddd476e0b2a50915de6c4fb0f41e6e24c85", features = ["otel"] }

# test dependencies
[dev-dependencies]
rand = "0.8"
env_logger = "0.9"
wasmcloud-test-util = { git = "https://github.com/wasmcloud/wasmcloud-test", rev = "266272ab2466187bfaa2cd2410881b5c9bd002c2" }

[build-dependencies]
# for local code generation of wasmbus-interface-keyvalue
weld-codegen = "0.5.0"

[[bin]]
name = "kv-vault"
path = "src/main.rs"


[lib]
name = "kv_vault_lib"
path = "src/lib.rs"