[package]
name = "wasmcloud-provider-kvredis"
version = "0.15.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
crossbeam = "0.8"
futures = "0.3"
once_cell = "1.8"
redis = { version = "0.21", features = ["tokio-comp"] }
rmp-serde = "0.15"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmcloud-interface-keyvalue = { git = "https://github.com/wasmcloud/interfaces", rev = "7b8fe081e8e94530a1c571348ab37e6650420878" }
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "3029ca06bae2c08237563e39988988a32ceee01d", features = ["otel"] }

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
# We don't use paste directly, but we pin to a version that works with aarch64-linux
paste = "=1.0.6"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = { git = "https://github.com/wasmcloud/wasmcloud-test", rev = "fc56ff6ba5008145f5add20f7f06eaa6456717e2" }
rand = "0.8"

[[bin]]
name = "kvredis"
path = "src/main.rs"
