[package]
name = "wasmcloud-provider-kvredis"
version = "0.15.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
crossbeam = "0.8"
futures = "0.3"
once_cell = "1.8"
redis = { version = "0.21", features = ["tokio-comp"] }
rmp-serde = "0.15"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmcloud-interface-keyvalue = { git = "https://github.com/wasmcloud/interfaces", rev = "d4d6b2af443246f09f2201ba502b87cc1389bb6f" }
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "249102567eb50fddaf3a35c2546afbdb321e8b16", features = ["otel"] }

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
# We don't use paste directly, but we pin to a version that works with aarch64-linux
paste = "=1.0.6"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = { git = "https://github.com/wasmcloud/wasmcloud-test", rev = "33d68d1cd59fa543510c30e69dfc9c2d68295e48" }
rand = "0.8"

[[bin]]
name = "kvredis"
path = "src/main.rs"
