[package]
name = "wasmcloud-provider-lattice-controller"
version = "0.7.0"
edition = "2021"

[dependencies]
async-nats = "0.15.0"
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
bytes = "1.0"
futures = "0.3"
once_cell = "1.8"
reqwest = "0.11"
rmp-serde = "1.0.0"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wascap = "0.8.0"
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "249102567eb50fddaf3a35c2546afbdb321e8b16", features = ["otel"] }
wasmcloud-control-interface = { git = "https://github.com/wasmcloud/control-interface-client", rev ="4ba11659a3a23a8926f0005db80919d4c42f0c69" }

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
# We don't use paste directly, but we pin to a version that works with aarch64-linux
paste = "=1.0.6"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = { git = "https://github.com/wasmcloud/wasmcloud-test", rev = "33d68d1cd59fa543510c30e69dfc9c2d68295e48" }

[[bin]]
name = "lattice-controller"
path = "src/main.rs"
