[package]
name = "wasmcloud-provider-nats"
version = "0.13.0"
edition = "2021"

[dependencies]
async-nats = "0.15.0"
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
crossbeam="0.8"
futures = "0.3"
once_cell = "1.8"
rmp-serde = "0.15"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wascap = "0.8"

wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "3029ca06bae2c08237563e39988988a32ceee01d", features = ["otel"] }
wasmcloud-interface-messaging = { git = "https://github.com/wasmcloud/interfaces", rev = "6fa5eb5f7ef45df9a658f62e234f1efdec4f3700" }

# test dependencies
[dev-dependencies]
wasmcloud-test-util = { git = "https://github.com/wasmcloud/wasmcloud-test", rev = "8cde90d1c4a492b40be4b699db86922c8c3d93fd" }

[[bin]]
name = "nats_messaging"
path = "src/main.rs"
