[package]
name = "blobview"
version = "0.1.8"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "blobview"

[dependencies]
async-trait = "0.1"
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.8.2"
serde = { version = "1.0", features = [ "derive" ] }
serde_bytes = "0.11"
serde_json = "1.0.79"
wasmcloud-interface-logging = "0.5.0"

[build-dependencies]
weld-codegen = "0.4.3"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
